fixed navbar spacing issue

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -2,6 +2,7 @@ nav {
   background-color: #dea406;
   width: 100vw;
   height: 60px;
+  padding: 0 2%;
 }
 
 nav ul {
